# TermRenamer

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: runbook.md
src/termrenamer/: __init__.py  __main__.py  app_bootstrap.py  wiring.py
src/termrenamer/api/: __init__.py  base.py  caching.py  omdb.py  tmdb.py  tvdb_v4.py
src/termrenamer/core/: __init__.py  apply.py  collisions.py  match.py  models.py  parse.py  planning.py  policies.py  sanitize.py  scan.py  sidecars.py  templates.py
src/termrenamer/observability/: __init__.py  events.py
src/termrenamer/persistence/: __init__.py  cache.py  schema.py  sqlite.py
src/termrenamer/tui/: actions.py  app.py  theme.tcss
src/termrenamer/util/: __init__.py  errors.py  http.py  logging.py
tests/fixtures/api_responses/: omdb_search_film.json  tmdb_search_movie.json  tmdb_search_show.json  tmdb_search_tv.json  tmdb_tv_detail.json  tvdb_login.json  (+3 more)
tests/integration/: test_apply_integration.py  test_cache_integration.py  test_collision_apply.py  test_confirm_flow.py  test_e2e_pipeline.py  test_film_pipeline.py  test_plan_build.py  test_sidecar_grouping.py
tests/unit/: test_activity_tab.py  test_apply.py  test_cache.py  test_collisions.py  test_core_policies.py  test_error_ux.py  test_events_bus.py  test_http.py  test_main_entry.py  test_match.py  test_mode_provider.py  test_observability.py  test_omdb.py  test_parse.py  test_planning.py  test_queue_ingestion.py  test_scan.py  test_screens.py  test_secrets.py  test_sidecars.py  test_smoke.py  test_templates.py  test_tmdb.py  test_tui_app.py  test_tvdb_v4.py  test_wiring.py  test_wiring_build.py
(+8 files in other folders)
